Fixed the alignment issue.

--- a/app/styles/components/reports/_qz-assessment-report.scss
+++ b/app/styles/components/reports/_qz-assessment-report.scss
@@ -93,3 +93,11 @@
     }
   }
 }
+
+.iframe-panel {
+  .reports.qz-assessment-report {
+    .qz-assessment-summary {
+      margin-top: 0px;
+    }
+  }
+}
